data/derived/sp14/progs/unify/prog1864.ml.out
Characters 36-37:
  List.fold_left crack base [fun x -> x * x] 3;;
                                      ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type int
